[package]
name = "RenegadeX-Launcher"
version = "0.1.0"
authors = ["SonnyX"]
edition = "2018"
build = "windows.rs"

[dependencies]
reqwest = "0.9.5"
json = "0.11.13"
sciter-rs = "0.5.45"
renegadex_patcher = { git = "https://github.com/SonnyX/RenegadeX-patcher-lib" }
xml-rs = "0.8.0"
rust-ini = "0.13.0"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"

[package.metadata.winres]
OriginalFilename = "RenegadeX_Launcher.exe"
FileDescription = "Launcher for RenegadeX"
LegalCopyright = "Copyright © 2019"
